# mypy-plugin-sample

./: README.md  pyproject.toml  sample_plugin.py
src/: target.py
